--- a/garyb6/package.json
+++ b/garyb6/package.json
@@ -2,6 +2,7 @@
   "name": "garyb6",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://garyb6.github.io",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
@@ -22,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "stop": "pkill -f 'react-scripts start'",
     "build": "react-scripts build",
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^30.0.0-beta.3",
+    "gh-pages": "^6.3.0",
     "jest-extended": "^5.0.3"
   }
 }
